# socket.io-client-cpp

./: .gitignore  .gitmodules  .travis.yml  API.md  BOOST.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  INSTALL_IOS.md  LICENSE  README.md  SocketIO-Client-CPP.podspec  Tutorial.md  build_ios_fat.sh  circle.yml  conanfile.txt  license.txt  sioclientConfig.cmake.in  socket.io-client-depend.pri  socket.io-client.pri  socket.io-client.pro
.github/workflows/: ci.yml  cmake.yml
cocoapods-test/: Podfile
cocoapods-test/Test/: AppDelegate.h  AppDelegate.mm  Info.plist  ViewController.h  ViewController.m  main.m
cocoapods-test/Test.xcodeproj/: project.pbxproj
cocoapods-test/Test.xcodeproj/project.xcworkspace/xcshareddata/: Test.xccheckout
cocoapods-test/Test.xcworkspace/: contents.xcworkspacedata
cocoapods-test/Test.xcworkspace/xcshareddata/: Test.xcscmblueprint
cocoapods-test/Test/Base.lproj/: LaunchScreen.xib  Main.storyboard
cocoapods-test/TestTests/: Info.plist  TestTests.m
debian/: README.Debian  README.source  changelog  control  copyright  rules
examples/Console/: CMakeLists.txt  README.md  main.cpp
examples/Console/SioChatDemo/: SioChatDemo.sln  SioChatDemo.vcxproj
examples/QT/: README.md
examples/QT/SioChatDemo/: .gitignore  SioChatDemo.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  nicknamedialog.cpp  nicknamedialog.h  nicknamedialog.ui
examples/QT/SioChatDemo/boost/: .gitignore  boost.sh
examples/iOS/: README.md
examples/iOS/SioChatDemo/: .gitignore
examples/iOS/SioChatDemo/SioChatDemo/: AppDelegate.h  AppDelegate.m  CRViewController.h  CRViewController.mm  Info.plist  Main.storyboard  main.m
examples/iOS/SioChatDemo/SioChatDemo.xcodeproj/: project.pbxproj
examples/iOS/SioChatDemo/SioChatDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/iOS/SioChatDemo/SioChatDemo.xcodeproj/project.xcworkspace/xcshareddata/: SioChatDemo.xccheckout
examples/iOS/SioChatDemo/SioChatDemo.xcodeproj/project.xcworkspace/xcuserdata/hello.xcuserdatad/: UserInterfaceState.xcuserstate
examples/iOS/SioChatDemo/SioChatDemo/Base.lproj/: LaunchScreen.xib
examples/iOS/SioChatDemo/SioChatDemoTests/: SioChatDemoTests.m
examples/iOS/SioChatDemo/boost/: .gitignore
examples/iOS/SioChatDemo/sioclientTests/: Info.plist
src/: sio_client.cpp  sio_client.h  sio_message.h  sio_packet.cpp  sio_packet.h  sio_socket.cpp  sio_socket.h
src/internal/: sio_client_config.h  sio_client_impl.cpp  sio_client_impl.h  sio_export.h  sio_packet.cpp  sio_packet.h
test/: CMakeLists.txt  README.md  sio_test  sio_test.cpp  sio_test_sample.cpp
test/echo_server/: index.js  package-lock.json  package.json
